--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ In a small village in about 50 years ago  my grandfather aws a huge fan of Coffe
   <div class="btn">
                 <button class="button">Order Now</button>
             </div>
+   <script src="script.js"> 
+    </script>
 </body>
 
 </html>
